--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <header>
+            <img class="photo" src="./img/photo.jpeg" alt="Avatar"/>
+            <div class="nameProf">
+                <h1>Klevleev Vyacheslav</h1>
+                <h2>Front-end developer</h2>
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
