refactor: apply validator

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ export default Description;&lt;/p>
     </div>
     <footer>
         <div class="firstRow">
-            <a href="https://rs.school/js/"><img src="./img/rs_school_js.svg" /></a>
-            <a href="https://github.com/slavaklevleev"><img src="./img/github.png" /></a>
+            <a href="https://rs.school/js/"><img src="./img/rs_school_js.svg" alt="rsschool logo"/></a>
+            <a href="https://github.com/slavaklevleev"><img src="./img/github.png" alt="github logo"/></a>
 
         </div>
         <div class="secondRow">Vyacheslav Klevleev 2021</div>
