refactor: remove the typo

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ const Description = (props) => {<br/>
     );<br/>
 };<br/>
 <br/>
-export default Description;&lt;/p>
+export default Description;
                         </code>
                     </pre>
                 </div>
